tests/custom-5.4.3/noncompliant/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: custom-5.4.3-noncompliant
policies:
  - ../../../kyverno-policies/custom-5.4.3.yaml
resources:
  - node.yaml
results:
  - policy: custom-5-4-3-private-nodes
    rule: check-private-nodes
    resources:
      - noncompliant-node
    kind: Node
    result: fail
